--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,11 +61,11 @@ bind -r L resize-pane -R 5
 # END:paneresize
 # mouse support - set to on if you want to use the mouse
 # START:mouse
-setw -g mode-mouse on 
-# END:mouse
-set -g mouse-select-pane on 
-set -g mouse-resize-pane on 
+set -g mode-mouse on
 set -g mouse-select-window on
+set -g mouse-select-pane on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # Set the default terminal mode to 256color mode
 # START:termcolor
